[package]
name = "genpass"
description = "A rusty password generator"
authors = ["Elliana Perry <elliana.perry@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
regex = "1.6.0"
colored = "2"
argon2 = "0.4"
sha-crypt = "0.4.0"
scrypt = "0.2"
rand_core = { version = "0.6", features = ["std"] }
clap = { version = "4.0.15", features = ["derive","color"] }
