[package]
name = "genpass"
description = "A rusty password generator"
authors = ["Elliana Perry <elliana.perry@gmail.com>"]
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ron = "0.8"
rand = "0.8.5"
regex = "1.6.0"
colored = "2"
argon2 = "0.4.1"
sha-crypt = "0.4.0"
scrypt = "0.10.0"
directories-next = "2.0.0"
rand_core = { version = "0.6", features = ["std"] }
clap = { version = "4.0.15", features = ["derive","color"] }
serde = { version = "1.0.145", features = ["derive"] }
log = { version = "0.4.17", features = ["std"] }

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
